# todolist

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: deploy_main.yaml
core/: admin.py  models.py
core/migrations/: 0001_initial.py
deploy/: .env  docker-compose.yaml  nginx.conf
tests/: conftest.py  factories.py
tests/goals/views/board/: create_test.py  delete_test.py  detail_test.py  update_test.py
tests/goals/views/goal/: create_test.py  delete_test.py  detail_test.py  list_test.py  update_test.py
tests/goals/views/goal_category/: create_test.py  delete_test.py  detail_test.py  list_test.py  update_test.py
tests/goals/views/goal_comment/: create_test.py  delete_test.py  detail_test.py  list_test.py  update_test.py
todolist/: settings.py  urls.py
todolist/bot/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
todolist/bot/management/commands/: runbot.py
todolist/bot/migrations/: 0001_initial.py  0002_initial.py
todolist/bot/tg/: client.py  dc.py
todolist/core/: fields.py  serializers.py  urls.py  views.py
todolist/core/migrations/: 0001_initial.py
todolist/goals/: admin.py  apps.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
todolist/goals/migrations/: 0001_initial.py
