[tool.poetry]
name = "todolist"
version = "0.1.0"
description = ""
authors = ["Amir Gabduvaliev"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
psycopg2-binary = "^2.9.5"
envparse = "^0.2.0"
gunicorn = "^20.1.0"
env = "^0.1.0"
pre-commit = "^3.2.1"
ansible-vault-win = "^1.0.0"
factory-boy = "^3.2.1"
djangorestframework = "^3.14.0"
social-auth-app-django = "^5.2.0"
djangorestframework-jsonapi = "^6.0.0"
django-filter = "^23.1"
marshmallow = "^3.19.0"
marshmallow-dataclass = "^8.5.12"
drf-spectacular = "^0.26.2"
pytest-factoryboy = "^2.5.1"
pytest-django = "^4.5.2"

[tool.poetry.group.dev.dependencies]
django-extensions = "^3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
